--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -15,22 +15,20 @@ html(lang="en")
             .container.header-container     
                 nav.row
                     .d-flex.col-lg-7.col-md-12.col-sm-12.justify-content-between.align-items-center
-                        a(href='https://krayt.ru/').header__logo-container
+                        a(href='#~').header__logo-container
                             img(src='./assets/img/Logo.png' class='header__logo')
                             span.header__logo-text Giant 
                         i.fas.fa-bars.menu-bar      
                     .col-lg-5.header__nav
-                        a(href='https://krayt.ru/').header__link Home
-                        a(href='https://krayt.ru/').header__link Future
-                        a(href='https://krayt.ru/').header__link Pricing
-                        form(action="https://krayt.ru/" target="_blank")
-                            +button('Download Now')
+                        a(href='#~').header__link Home
+                        a(href='#~').header__link Future
+                        a(href='#~').header__link Pricing
+                        +button('Download Now')
                     .header.header__burger.col-12
-                        a(href='https://krayt.ru/').header__link Home
-                        a(href='https://krayt.ru/').header__link Future
-                        a(href='https://krayt.ru/').header__link Pricing
-                        form(action="https://krayt.ru/" target="_blank")
-                            +button('Download Now')            
+                        a(href='#~').header__link Home
+                        a(href='#~').header__link Future
+                        a(href='#~').header__link Pricing
+                        +button('Download Now')            
                 img(src='./assets/img/iPhones.png' class='header__background-image')                
                 main.header__main.row.col-lg-6.col-md-12.flex-column
                     h1.header__title A Powerful & Unique App Landing Template
